Fix rich text font size on mobile

--- a/src/packages/arbeidsplassen-css/rich-text.css
+++ b/src/packages/arbeidsplassen-css/rich-text.css
@@ -10,12 +10,26 @@
   line-height: var(--a-font-line-height-heading-2xlarge);
 }
 
+@media (max-width: 480px) {
+  .arb-rich-text h1 {
+    font-size: var(--a-font-size-heading-xlarge);
+    line-height: var(--a-font-line-height-heading-xlarge);
+  }
+}
+
 .arb-rich-text h2 {
   margin: var(--a-spacing-7) 0 var(--a-spacing-4) 0;
   letter-spacing: -0.03em;
   font-weight: 700;
   font-size: var(--a-font-size-heading-xlarge);
   line-height: var(--a-font-line-height-heading-xlarge);
+}
+
+@media (max-width: 480px) {
+  .arb-rich-text h2 {
+    font-size: var(--a-font-size-heading-large);
+    line-height: var(--a-font-line-height-heading-large);
+  }
 }
 
 .arb-rich-text h3 {
